<resources>
    <string name="app_name">Piano Wizard Idiot</string>
    <string name="accessibility_description">Simulate clicking the screen to realize automatically playing musical instruments.</string>
    <string name="accessibility_title">Auto Piano Playing - Piano Wizard</string>
    <string name="btn_req_file_perm">File IO: %s</string>
    <string name="btn_req_win_perm">Floating win: %s</string>
    <string name="btn_req_accessibility_perm">Accessibility: %s</string>
    <string name="common_on">On</string>
    <string name="common_off">Off</string>
    <string name="launch">Launch</string>
    <string name="key_layout">Layout</string>
    <string name="music_score">Music</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="display_number">Number</string>
    <string name="reset_marker">Reset marker</string>
    <string name="semitone">Semitone</string>
    <string name="layout_empty_warn_message">The current layout is empty. Please select a layout first</string>
    <string name="select_layout">Select layout</string>
    <string name="select_music">Select music</string>
    <string name="modulation">Modulation: %d</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="rename">Rename</string>
    <string name="delete_confirm_message">Are you sure you want to delete \"%s\"?</string>
    <string name="require_name_message">Please enter a name</string>
    <string name="save">Save</string>
    <string name="save_all_layouts_message">All layouts have been saved</string>
    <string name="stop">Stop</string>
    <string name="music_empty_warn_message">The current sheet music is empty. Please select a sheet music first</string>
    <string name="enter_layout_name_hint">Enter layout name</string>
    <string name="music_syntax_error_message">The sheet music format is incorrect, parsing failed</string>
    <string name="unsupported_note_message">Unsupported note: %s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="error">Error</string>
    <string name="missing_key_note_confirm_message">The current settings cannot play this music completely. Are you sure you want to continue?</string>
    <string name="resume">Resume</string>
    <string name="key_note_absent_message">The current layout does not contain this note</string>
    <string name="layout_lack_key_message">The current keyboard layout lacks the necessary keys to fully play this music</string>
    <string name="about">About</string>
    <string name="about_message">Open-source repository: %s\n\nQQ group: %s</string>
    <string name="about_goto_repository">Go to the repo</string>
    <string name="about_copy_group_number">Copy the group num</string>
    <string name="key_layout_offset">Offset: %d</string>
    <string name="enter_key_offset_hint">Enter offset value</string>
    <string name="key_offset">Key offset</string>
    <string name="require_correct_integer_message">Please enter a valid integer value</string>
    <string name="convert_sky_studio_sheet">Convert SkyStudio sheet</string>
    <string name="select_sky_studio_sheet_file">Select SkyStudio sheet file</string>
    <string name="current_folder">The current folder</string>
    <string name="target_must_gte_zero_message">The %s must be greater than or equal to zero: %s</string>
    <string name="target_must_gt_zero_message">The %s must be greater than zero: %s</string>
    <string name="target_cannot_empty_message">The %s cannot be empty</string>
    <string name="target_format_incorrect_message">The format of %s is incorrect: %s</string>
    <string name="format_error_at_message">Format error (line: %d, column: %d)</string>
    <string name="convert_current_folder_confirm_message">This operation will convert all files in the current folder. Do you wish to continue?</string>
    <string name="processing">Processing</string>
    <string name="convert_result">Convert result</string>
    <string name="other">Other</string>
    <string name="tempo_rate">Tempo rate</string>
    <string name="tap_mode">Tap mode</string>
    <string name="tap">Tap</string>
    <string name="tap_and_hold">Tap and hold</string>
    <string name="repeatedly_tap">Repeatedly tap</string>
    <string name="early_release">Early release</string>
    <string name="tap_interval">Tap interval</string>
    <string name="playing_settings">Playing settings</string>
    <string name="search">Search</string>
    <string name="pre_play_delay">Pre-play\ndelay</string>
    <string name="post_play_delay">Post-play\ndelay</string>
    <string name="hide_window">Hide window</string>
    <string name="hide_window_when_playing">Hide window when playing</string>
    <string name="convert_midi_file">Convert midi file</string>
    <string name="merge">Merge</string>
    <string name="select_channel">Select channels</string>
    <string name="require_channel_selected_message">No channel selected</string>
    <string name="convert_success">Convert success</string>
    <string name="select_midi_file">Select midi file</string>
    <string name="demo_video">Demo video</string>
    <string name="link_operation_demo_video">https://youtu.be/tU5OIt_g4E0</string>
    <string name="link_midi_demo_video">https://youtu.be/gurdiKIJNsI</string>
    <string name="idiot_extract_music_sheet">Extract music sheet</string>
    <string name="require_file_perm_message">File read and write permissions need to be granted.</string>
    <string name="require_all_perm_message">Please grant the required permissions first.</string>
    <string name="require_extract_sheet_message">Please unzip the sheet music first.</string>
    <string name="require_view_tutorial_message">Please go to \"About\" to view the video tutorial.</string>
    <string name="hint">Hint</string>
    <string name="extract_success">Extract success</string>
    <string name="goto_default_folder">Go to default</string>
    <string name="go_to">Go to</string>
    <string name="invalid_path_message">Invalid path</string>
    <string name="select_folder">Select folder</string>
    <string name="folder_empty_warn_message">The current folder is empty. Please select a folder first</string>
    <string name="repeat_all">Repeat all</string>
    <string name="random">Random</string>
    <string name="play_mode">Play mode</string>
    <string name="single_mode">Single</string>
    <string name="list_mode">List</string>
</resources>
