<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|end"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/btn_save"
        style="@style/DialogImageButtonStyle"
        android:contentDescription="@string/save"
        android:src="@drawable/outline_save_24" />

    <ImageButton
        android:id="@+id/btn_create"
        style="@style/DialogImageButtonStyle"
        android:layout_marginHorizontal="8dp"
        android:contentDescription="@string/create"
        android:src="@drawable/outline_add_32" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/btn_delete"
        style="@style/DialogImageButtonStyle"
        android:contentDescription="@string/delete"
        android:src="@drawable/outline_delete_forever_32" />

    <ImageButton
        android:id="@+id/btn_rename"
        style="@style/DialogImageButtonStyle"
        android:layout_marginHorizontal="8dp"
        android:contentDescription="@string/rename"
        android:src="@drawable/outline_drive_file_rename_outline_32" />

    <ImageButton
        android:id="@android:id/primary"
        style="@style/DialogImageButtonStyle"
        android:contentDescription="@android:string/ok"
        android:src="@drawable/outline_done_24" />
</LinearLayout>
