<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#99000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_collapse"
            style="@style/WindowButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/collapse" />

        <Button
            android:id="@+id/btn_controller_switch"
            style="@style/WindowButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/key_layout" />

        <Button
            android:id="@+id/btn_stop_music"
            style="@style/WindowButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controller_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/music_score_controller_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_choose_music"
                style="@style/WindowButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_music" />

            <Button
                android:id="@+id/btn_other_settings"
                style="@style/WindowButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other" />

            <Button
                android:id="@+id/btn_modulation"
                style="@style/WindowButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/tone_wrapper_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_tone_minus_1"
                    style="@style/WindowButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-1" />

                <Button
                    android:id="@+id/btn_tone_plus_1"
                    style="@style/WindowButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tone_wrapper_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_tone_minus_12"
                    style="@style/WindowButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-12" />

                <Button
                    android:id="@+id/btn_tone_plus_12"
                    style="@style/WindowButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+12" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_start_music"
                style="@style/WindowButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_pause_music"
            style="@style/WindowButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pause" />

        <LinearLayout
            android:id="@+id/key_layout_controller_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_choose_key_layout"
                style="@style/WindowButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_layout" />

            <Button
                android:id="@+id/btn_reset_indicator"
                style="@style/WindowButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_indicator" />

            <CheckBox
                android:id="@+id/cb_display_number"
                style="@style/WindowCheckBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_number" />

            <CheckBox
                android:id="@+id/cb_enable_semitone"
                style="@style/WindowCheckBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/semitone" />

            <Button
                android:id="@+id/btn_key_layout_offset"
                style="@style/WindowButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/key_offset" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_point_remove"
                    style="@style/WindowButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-" />

                <Button
                    android:id="@+id/btn_point_add"
                    style="@style/WindowButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
